--- a/css/index.css
+++ b/css/index.css
@@ -3,41 +3,43 @@
   --offWhite2:hsl(0,0%,95%);
   --offWhite3:hsl(0,0%,90%);
   --myGreen:hsl(90,60%,30%);
-  --Myred:hsl(10,60%,40%);
+  --Myred:hsl(10,60%,30%);
+  --MyredSpan:hsl(10,60%,40%);
   --myGrey:hsl(240,3%,40%);
 }
 .contents-div{
-  margin: 1% 3%;
-  display: flex;
-  padding: 0% 3%;
-  border-radius: 25px;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: 2px 2px 10px black;
-}
-
-table{
-  background-color: var(--offWhite3);
-  text-align: center;
-  border: 1px solid;
-  border-collapse: collapse;
+  max-width: 500px;
+  margin: 2%;
 }
 .description-text{
 
   margin-bottom: 0;
 }
-td,th{
-  padding: 2px;
+header h1{
+  font-size: 22px;
+  color: var(--offWhite3);
+}
+header{
+  display: flex;
+  padding: 0% 2%;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--Myred);
   border: 1px solid;
-  
+  height: 10%;
 }
 body{
+  font-family: Arial,Sans-Serif;
+  background-color: var(--offWhite2);
+  height:100vh;
   margin: 0px;
 }
 #results-div{
+  padding: 3% 0%;
+  display: none;
   text-align: center;
   border-radius: 10px;
-  background-color: var(--offWhite2);
+  background-color: var(--offWhite3);
   margin: 5px 0px;
   
 }
@@ -45,7 +47,6 @@ body{
   font-weight: bold;
   margin : 1px;
 }
-
 #container{
   margin-top: 0;
   border-radius: 10px;
@@ -63,35 +64,37 @@ ul{
 li{
   padding-block: 5px 2px;
 }
-
 input{
+  animation-name: slideUp;
+  animation-duration: 1s;
   border: 2px solid;
   border-radius: 10px;
   width: 100%;
   box-sizing: border-box;
   font-size: 15px;
-  padding:10px 5px;
+  padding:15px 5px;
 }
 span{
-  color: var(--Myred);
+  color: var(--MyredSpan);
 }
 button{
+  animation-name: fade;
+  animation-duration: 2s;
   font-weight: bold;
   background-color: var(--myGreen);
   width: 100%;
   border-radius: 10px;
   border: none;
   color: white;
-  padding: 10px;
+  padding: 15px;
 }
 a button{
-  margin: 10px 0px;
+  margin: 5px 0px;
   background-color: var(--Myred);
 }
-.calculate-percentage-text{
-  margin-bottom: 2px;
-  text-align: center;
-  color: black;
-  font-weight: bold;
-  text-decoration: none;
+@keyframes slideUp{
+  from{transform :translateY(200%)}
+}
+@keyframes fade{
+  50%{opacity :0}
 }
